<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_service_ll_main"
    style="@style/DefaultPage"
    tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.editing.EditServiceActivity">

    <include layout="@layout/part_top_panel" />

    <ProgressBar
        android:id="@+id/activity_edit_service_pb_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/mainBlue"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel" />

    <ScrollView
        android:id="@+id/activity_edit_service_sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_panel">

        <LinearLayout style="@style/wideVerticalBlock">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialInputLayout"
                android:hint="Название"
                app:startIconDrawable="@drawable/icon_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_edit_service_et_name"
                    style="@style/MaterialInput"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialInputLayout"
                android:hint="Цена"
                app:startIconDrawable="@drawable/icon_dollar_sign_solid">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_edit_service_et_cost"
                    style="@style/MaterialInput"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialInputLayout"
                android:hint="Адрес"
                app:startIconDrawable="@drawable/icon_map_marked_solid">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_edit_service_et_address"
                    style="@style/MaterialInput"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialInputLayout"
                android:hint="Описание"
                app:startIconDrawable="@drawable/icon_file_alt_regular">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_edit_service_et_description"
                    style="@style/MaterialInput"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                style="@style/MaterialInputLayout"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/icon_duration" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Длительность"
                    android:textColor="@color/dark_grey"
                    android:textSize="16sp" />

                <NumberPicker
                    android:id="@+id/activity_edit_service_np_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <NumberPicker
                    android:id="@+id/activity_edit_service_np_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/activity_edit_service_fr_category"
                android:name="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.adapters.elements.CategoryFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_edit_service_rv_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="none" />

            <LinearLayout
                android:id="@+id/activity_edit_service_ll_bottom"
                style="@style/wideVerticalBlock"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/bottom_panel">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_edit_service_btn_save"
                    style="@style/mainButton"
                    android:text="@string/save" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_edit_service_btn_delete"
                    style="@style/outlineButton"
                    android:text="@string/delete" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/part_bottom_panel" />

</androidx.constraintlayout.widget.ConstraintLayout>