<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_service_cl_main"
    style="@style/DefaultPage"
    tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.service.ServiceActivity">

    <include layout="@layout/part_top_panel" />

    <ScrollView
        android:id="@+id/activity_service_sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true">

                    <LinearLayout
                        android:id="@+id/activity_service_ll_rating_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/activity_service_tv_empty"
                            style="@style/mainBlockText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Оценок еще нет" />

                        <LinearLayout
                            android:id="@+id/activity_service_ll_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:id="@+id/activity_service_rb_rating"
                                style="@android:style/Widget.Holo.RatingBar.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:theme="@style/ratingBarColors" />

                            <TextView
                                android:id="@+id/activity_service_tv_rating"
                                style="@style/defaultText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0" />

                            <TextView
                                android:id="@+id/activity_service_tv_count"
                                style="@style/defaultText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cost"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:id="@+id/activity_service_tv_cost"
                                style="@style/ServiceBodyText"
                                android:text="@string/cost" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/address"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:id="@+id/activity_service_tv_address"
                                style="@style/ServiceBodyText"
                                android:text="@string/address" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/description"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:id="@+id/activity_service_tv_description"
                                style="@style/ServiceBodyText"
                                android:text="@string/description" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/duration"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:id="@+id/activity_service_tv_duration"
                                style="@style/ServiceBodyText"
                                android:text="@string/duration" />
                        </LinearLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:id="@+id/activity_service_ll_premium"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- Нижняя часть фотографии и кнопка-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/activity_service_rv_photos"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scrollbars="none" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_service_btn_schedule"
                style="@style/mainButton"
                android:layout_gravity="center"
                android:text="Расписание"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_service_btn_premium"
                style="@style/mainButton"
                android:layout_gravity="center"
                android:text="Премиум"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/activity_service_pb_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/mainBlue"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel" />

    <include layout="@layout/part_bottom_panel" />

</androidx.constraintlayout.widget.ConstraintLayout>