<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_action"
        android:icon="@drawable/icon_edit"
        android:title="action"
        app:showAsAction="always" />

</menu>
