<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile"
        android:title="Profile" />
    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/icon_main"
        android:title="Main screen" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/icon_dialogs"
        android:title="Dialog" />
</menu>