...
        <com.google.android.material.textfield.TextInputLayout
            style="@style/MaterialLoginInputLayout"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/icon_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_registration_et_name"
                style="@style/MaterialLoginInput"
                android:inputType="textPersonName|textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MaterialLoginInputLayout"
            android:hint="@string/surname"
            app:startIconDrawable="@drawable/icon_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_registration_et_surname"
                style="@style/MaterialLoginInput"
                android:inputType="textPersonName|textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
...
