...
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Spinner
                    android:id="@+id/citySpinnerRegistrationSpinner"
                    style="@style/loginPackageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/choice_cites" />
            </LinearLayout>

...
